# hangman_server

./: .env.docker  .env.example  .gitignore  Dockerfile  README.md  cuvinte.txt  docker-compose.yml  hangma.py  hangman.py  hangman_logic.py  index.html  main.py  pyproject.toml  render.yaml  requirements.txt
backend/server/: .env.example  Dockerfile
backend/server/src/: Dockerfile  database.py  main.py
backend/server/src/app/: app.py
backend/server/src/middleware/: auth.py
backend/src/: database.py  main.py  models.py  requirements.txt
backend/src/app/: app.py
backend/src/middleware/: rate_limit.py
backend/src/routes/: auth.py  games.py  health.py  sessions.py  stats.py  words.py
backend/src/schemas/: dictionary.py  game.py  guess.py  lista_cuvinte_en.json  lista_cuvinte_ro.json  session.py  stats.py  user.py  words.json
backend/src/services/: auth_service.py  game_service.py  stats_service.py  word_service.py
docker/: .dockerignore  Dockerfile  docker-compose.yaml
docs/: README.md
frontend/: admin.html  app.js  index.html  login.html  main.jsx  signup.html
frontend/components/: AdminLayout.jsx  AuthLayout.jsx  Button.jsx  Input.jsx  Login.jsx  Sidebar.jsx  admin.jsx  sigh_up.jsx
frontend/css/: difficulty.css  game.css  game_menu.css  general.css  login.css  register.css  styles.css
frontend/html/: admin.html  difficulty.html  game.html  game_menu.html  index.html  login.html  online_game.html  options.html  register.html  signup.html  single_game.html
frontend/javascript/: main.js
frontend/js/: app.js  game.js  main.js
(+11 files in other folders)
